2012-09-30 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildPatchApplyMaybe): Correct quilt unpatch.

2012-09-29 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallList): Optimize sed by removing empty lines.

2012-09-27 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildInstallPackageDocs): Return if no dir found.

	* bin/template/test.sh.ex (CURDIR): improve.

2012-09-26 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallList): Support glob wildcard
	install in SOURCE.
	(CygbuildInstallExtraManualCompress): Remove *.sh etc. extensions.

	* bin/template/manualpage.1.pod.ex: Move DESCRIPTION before OPTIONS.

2012-09-25 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallList): Correct tofile not to include
	SOURCE path component.

	* bin/template/install.lst.ex: Adjust the syntax comment.

2012-09-25 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/test.sh.ex: New.

	* bin/template/manualpage.1.redirection.ex: New example how to
	redirect to another manual page.

	* bin/template/manualpage.1.pod.ex: (AUTHORS): Update GPL stanza.

	* bin/cygbuild.sh (CygbuildHelpShort): Add colons to AUTHOR
	section output.
	(CygbuildCmdInstallList): Add better ln-case checks.
	(CygbuildCmdTestAdditional): Add --debug option support.
	(CygbuildCmdTestAdditional): adjust path in message.
	(CygbuildCmdInstallList): Allow install.lst::FROM be directory.
	(CygbuildCmdInstallList): Use tar --dereference to copy real files.

2012-09-24 Mon  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildPatchApplyMaybe): unpatch quilt last.
	(CygbuildDefineGlobalCommands): require quilt or die.

2012-09-23 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildInstallExtraManualList): New. Add
	CYGWIN-PATCHES/manpages support.
	(CYGBUILD_HOMEPAGE_URL): Correct *.net to *.com URL.
	(CygbuildCmdInstallMain): Really, run install-after.sh last.
